--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,13 @@
 all:
 	@	echo Hello
 
+run:
+	python manage.py runserver 8081
+
+migrations:
+ 	python manage.py makemigrations
+	python manage.py migrate
+
 venv:
 	python3 -m venv core
 	sudo ./core/bin/activate
